GraphDB refactor